# concise-text-format

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPECIFICATION.md  benchmark-results-summary.md  package-lock.json  package.json  run-benchmark-haiku45.js  run-benchmark-sonnet45.js  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md
benchmarks/datasets/: config.json  ecommerce.json  employees.json
benchmarks/llm-tests/: README.md  generate-questions.js  runner.js
benchmarks/llm-tests/providers/: anthropic.js  base.js  index.js  openai.js
benchmarks/llm-tests/questions/: by-dataset.json  generated.json  generator.js
benchmarks/llm-tests/validators/: llm-judge.js  type-aware.js
benchmarks/scripts/: real-token-count.js  token-count.js
docs/: api-reference.md  getting-started.md
python/: .gitignore  README.md  pyproject.toml
python/ctf/: __init__.py  cli.py  decoder.py  encoder.py  optimizer.py  references.py  types.py  utils.py
python/tests/: __init__.py  test_decoder.py  test_encoder.py  test_roundtrip.py
